#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([salfet], [0.1.0], [http://github.com/Kojoley/salfet/issues])
AC_CONFIG_SRCDIR([salfet.c])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
PKG_PROG_PKG_CONFIG([0.9])

AC_ARG_ENABLE([static-link],
	AS_HELP_STRING([--enable-static-link], [Link statically with libraries [no]]),
	[ enable_static_link=${enableval} ], [ enable_static_link=no ])
if test "x$enable_static_link" = "xyes" ; then
	# Tell pkg-config to link against static libraries, incl. all dependencies
	PKG_CONFIG="${PKG_CONFIG} --static"
fi

AC_ARG_ENABLE([static],
	AS_HELP_STRING([--enable-static], [Link statically [no]]),
	[ enable_static=${enableval} ], [ enable_static=no ])
if test "x$enable_static" = "xyes" ; then
	CFLAGS="${CFLAGS} --static"
	LDFLAGS="${LDFLAGS} --static"
fi

# Checks for libraries.
PKG_CHECK_MODULES([FFMPEG], [libavformat libavfilter libavcodec libswscale libavutil])

# Checks for header files.
AC_CHECK_HEADERS([inttypes.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_UINT8_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
